# ipod-manager

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml
e2e/fixtures/: mock-data.ts  tauri-init.js  tauri-mocks.ts
e2e/tests/: file-explorer.spec.ts  file-sync.spec.ts  library.spec.ts  navigation.spec.ts  settings.spec.ts
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acoustid.rs  albumart.rs  audio_utils.rs  audioquality.rs  commands.rs  convert.rs  disk.rs  error.rs  files.rs  ipod_info.rs  lib.rs  library.rs  libstats.rs  localvideo.rs  mediakeys.rs  metadata.rs  metarepair.rs  musicbrainz.rs  playlist_export.rs  profiles.rs  rockbox.rs  sanitize.rs  streaming.rs  volume_monitor.rs  watcher.rs  youtube.rs
src-tauri/src/audio/: decoder.rs  engine.rs  equalizer.rs  mod.rs  resampler.rs  time_stretch.rs  types.rs
src-tauri/src/commands/: audio.rs  files.rs  ipod.rs  library.rs  media.rs  metadata.rs  mod.rs  playlists.rs  system.rs
src-tauri/src/files/: compare.rs  copy.rs  fileops.rs  listing.rs  mod.rs  tests.rs  types.rs
src-tauri/src/metarepair/: detection.rs  lookup.rs  matching.rs  mod.rs  tests.rs  types.rs
src/components/: AlbumArtManager.tsx  ComparisonView.tsx  FileExplorer.tsx  MountPanel.tsx  SyncManager.tsx
src/contexts/: ArtCacheContext.tsx  EqualizerContext.tsx  PlaybackContext.tsx  PlaylistContext.tsx  (+5 more)
(+248 files in other folders)
