[package]
name = "app"
version = "0.1.0"
description = "Crate — music library and iPod management tool"
authors = ["you"]
license = "MIT"
repository = "https://github.com/m-leriche/ipod-manager"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "Crate"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
lofty = "0.21"
id3 = "1"
ureq = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
strsim = "0.11"
